# gh-stats

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
gh_stats/: __init__.py  activity.py  api.py  cli.py  heatmap.py  html_export.py  team.py  team_comparison_ui.py  team_trends.py  team_trends_ui.py  team_ui.py  ui.py
tests/: __init__.py  test_activity.py  test_api.py  test_api_extended.py  test_cli.py  test_cli_compare.py  test_comparison.py  test_heatmap.py  test_html_export.py  test_team.py  test_team_comparison.py  test_team_trends.py  test_team_trends_ui.py  test_ui.py
