[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gh-stats"
version = "0.1.0"
description = "A beautiful terminal dashboard for your GitHub activity"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "jlaportebot" },
]
keywords = ["github", "stats", "cli", "terminal", "dashboard", "contributions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
gh-stats = "gh_stats.cli:main"

[project.urls]
Homepage = "https://github.com/jlaportebot/gh-stats"
Repository = "https://github.com/jlaportebot/gh-stats"
Issues = "https://github.com/jlaportebot/gh-stats/issues"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
