[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gh-stats"
version = "0.1.0"
description = "A beautiful terminal dashboard for your GitHub activity"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "jlaportebot" },
]
keywords = ["github", "stats", "cli", "terminal", "dashboard", "contributions"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
]

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "typecheck"},
]
lint = ["ruff>=0.6.0"]
test = ["pytest>=8.0.0", "pytest-cov>=5.0.0"]
typecheck = ["ty>=0.0.50"]

[project.scripts]
gh-stats = "gh_stats.cli:main"

[project.urls]
Homepage = "https://github.com/jlaportebot/gh-stats"
Repository = "https://github.com/jlaportebot/gh-stats"
Issues = "https://github.com/jlaportebot/gh-stats/issues"

[tool.ruff]
line-length = 100
target-version = "py311"
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",        # docstring rules (too strict)
    "COM812",   # trailing comma in format string
    "ISC001",   # redundant isinstance check
    "PLR0913",  # too many arguments (common in CLI)
    "TRY003",   # avoid specifying long messages outside exception
    "PLR0917",  # too many positional arguments (CLI entry point)
    "PLR0915",  # too many statements (CLI entry point)
    "FBT001",   # boolean positional argument (Click options)
    "FBT002",   # boolean default positional argument (format_diff helper)
    "FBT003",   # boolean positional value in function call (format_diff calls)
    "DOC501",   # missing exception in docstring (CLI entry point)
    "PLW0717",  # try clause too many statements (CLI entry point)
    "PLC0415",  # import not at top level (lazy imports in CLI)
    "B904",     # raise without from (SystemExit in CLI)
    "RUF003",   # ambiguous dash in comments (Unicode)
    "RUF002",   # ambiguous dash in docstrings (Unicode)
    "PLR2004",  # magic value used in comparison (threshold constants)
    "C901",     # function too complex (heatmap rendering)
    "PLR0912",  # too many branches (heatmap rendering)
    "PLR0914",  # too many local variables (heatmap rendering)
    "SIM108",   # ternary operator suggestion (personal preference)
    "DTZ001",   # datetime without tzinfo (explicit UTC handling)
    "DOC201",   # return not documented in docstring (private helpers)
    "PLR6104",  # use -= operator (style preference)
    "FURB118",  # use operator.itemgetter instead of lambda (readability)
]
per-file-ignores = { "tests/*" = ["S101", "ANN201", "ANN001", "PLR6301", "PLR2004", "PLC1901", "F401", "INP001", "S105", "PLC2701", "RUF069", "DTZ001"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=gh_stats",
    "--cov-report=term-missing",
    "--cov-fail-under=70",
    "-v",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ty.terminal]
error-on-warning = true

[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
possibly-unresolved-reference = "error"
unused-ignore-comment = "warn"